News UAT/force-app/main/default/objects/SalesSummary__c/SalesSummary__c.object-meta.xml
<CustomObject>
    <description>A summary object of opportunity data (sales performance) vs target data</description>
    <label>Sales Summary</label>
    <nameField>
        <label>Summary Type</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales Summaries</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>