News UAT/force-app/main/default/objects/SalesSummary__c/fields/BookingRevenueType__c.field-meta.xml
<CustomField>
    <fullName>BookingRevenueType__c</fullName>
    <label>Booking Revenue Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Digital</fullName>
            </value>
            <value>
                <fullName>Print</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>