News UAT/force-app/main/default/objects/SalesSummary__c/fields/Count__c.field-meta.xml
<CustomField>
    <fullName>Count__c</fullName>
    <label>Count</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>