News UAT/force-app/main/default/objects/SalesSummary__c/fields/DivisionScheme__c.field-meta.xml
<CustomField>
    <fullName>DivisionScheme__c</fullName>
    <label>Division Scheme</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>SH1</fullName>
            </value>
            <value>
                <fullName>SH3</fullName>
            </value>
            <value>
                <fullName>SH4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>