News UAT/force-app/main/default/objects/SalesSummary__c/fields/FiscalMonthEndDate__c.field-meta.xml
<CustomField>
    <fullName>FiscalMonthEndDate__c</fullName>
    <label>Fiscal Month End Date</label>
    <type>Date</type>
</CustomField>