News UAT/force-app/main/default/objects/SalesSummary__c/fields/FiscalMonthStartDate__c.field-meta.xml
<CustomField>
    <fullName>FiscalMonthStartDate__c</fullName>
    <label>Fiscal Month Start Date</label>
    <type>Date</type>
</CustomField>