News UAT/force-app/main/default/objects/SalesSummary__c/fields/MonthId__c.field-meta.xml
<CustomField>
    <fullName>MonthId__c</fullName>
    <description>The Id of the month example &quot;201602&quot; is Febuary 2016</description>
    <label>Fisc Month Id</label>
    <length>6</length>
    <type>Text</type>
</CustomField>