News UAT/force-app/main/default/objects/SalesSummary__c/fields/NRCredits__c.field-meta.xml
<CustomField>
    <fullName>NRCredits__c</fullName>
    <label>NR Credits</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>