News UAT/force-app/main/default/objects/SalesSummary__c/fields/NRDebits__c.field-meta.xml
<CustomField>
    <fullName>NRDebits__c</fullName>
    <label>NR Debits</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>