News UAT/force-app/main/default/objects/SalesSummary__c/fields/PipelineDate__c.field-meta.xml
<CustomField>
    <fullName>PipelineDate__c</fullName>
    <description>A trick only for Pipeline records to only display pipeline information in either today&#39;s or this months report, hiding it from reports if you try and pull old data as the pipeline is not being snap shot.</description>
    <formula>TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pipeline Date</label>
    <type>Date</type>
</CustomField>