News UAT/force-app/main/default/objects/SalesSummary__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <description>Current role of the user</description>
    <label>Current Role</label>
    <length>255</length>
    <type>Text</type>
</CustomField>