News UAT/force-app/main/default/objects/SalesSummary__c/fields/SalesSummaryStaging__c.field-meta.xml
<CustomField>
    <fullName>SalesSummaryStaging__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is of no use when the system is at REST, it is only used in APEX when receiving data from the staging object.</description>
    <label>Sales Summary Staging</label>
    <referenceTo>SalesSummaryStaging__c</referenceTo>
    <relationshipLabel>Sales Summaries</relationshipLabel>
    <relationshipName>Sales_Summaries</relationshipName>
    <type>Lookup</type>
</CustomField>