News UAT/force-app/main/default/objects/SalesSummary__c/fields/TargetArea2__c.field-meta.xml
<CustomField>
    <fullName>TargetArea2__c</fullName>
    <label>Target Area 2</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Individual</fullName>
            </value>
            <value>
                <fullName>Team</fullName>
            </value>
            <value>
                <fullName>State</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>