News UAT/force-app/main/default/objects/SalesSummary__c/fields/TargetType__c.field-meta.xml
<CustomField>
    <fullName>TargetType__c</fullName>
    <label>Target Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Portfolio</fullName>
            </value>
            <value>
                <fullName>Rep Code</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>