News UAT/force-app/main/default/objects/SalesSummary__c/fields/ThisMonth__c.field-meta.xml
<CustomField>
    <fullName>ThisMonth__c</fullName>
    <description>This date is used for the report to calculate which records belong to this month</description>
    <formula>DATE(Year__c, VALUE(RIGHT(MonthId__c, 2)) ,1)</formula>
    <label>This Month</label>
    <type>Date</type>
</CustomField>