News UAT/force-app/main/default/objects/SalesSummary__c/fields/TimePeriod__c.field-meta.xml
<CustomField>
    <fullName>TimePeriod__c</fullName>
    <description>A user friendly label for the time period</description>
    <formula>IF(
AND(
NOT(ISNULL(TEXT(Month__c))),
NOT(ISNULL(TEXT(Year__c)))),
TEXT(Month__c) &amp; &quot;, &quot; &amp; TEXT(Year__c),&quot;&quot;)</formula>
    <label>Time Period</label>
    <type>Text</type>
</CustomField>