News UAT/force-app/main/default/objects/SalesSummary__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Target</fullName>
                <color>#0B6FCE</color>
                <label>Target</label>
            </value>
            <value>
                <fullName>Actual</fullName>
                <color>#78C953</color>
                <label>Actual</label>
            </value>
            <value>
                <fullName>Pipeline</fullName>
                <color>#A845DC</color>
                <label>Pipeline</label>
            </value>
            <value>
                <fullName>Actual (NewsFact)</fullName>
                <color>#FF9900</color>
                <label>Actual (NewsFact)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>