News UAT/force-app/main/default/objects/SalesSummary__c/fields/UserExternalId__c.field-meta.xml
<CustomField>
    <fullName>UserExternalId__c</fullName>
    <formula>UserId__r.External_ID__c</formula>
    <label>UserExternalId</label>
    <type>Text</type>
</CustomField>