News UAT/force-app/main/default/objects/SalesSummary__c/fields/UserId__c.field-meta.xml
<CustomField>
    <fullName>UserId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Salesforce User Id</description>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>SalesSummaries</relationshipName>
    <type>Lookup</type>
</CustomField>