News UAT/force-app/main/default/objects/SalesSummary__c/fields/Year__c.field-meta.xml
<CustomField>
    <fullName>Year__c</fullName>
    <label>Fisc Year</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>